Content of folders with a .blend extension aren't listed until filtering is disabled #46070

Closed
opened 2015-09-10 21:39:31 +02:00 by Vuk Gardašević · 6 comments

When trying to append a file from a folder with an extension .blend in the name (for instance TEST.blend) the contents of the folder will not be listed. Also the folder will be treated as blend file (having the icon) before clicking on it.
The filtering (the funnel icon) has to be disabled to show the blend files inside the folder.

(How it looks in Double Commander)
http://www.pasteall.org/pic/92972

How it is listed in Blender
http://www.pasteall.org/pic/92973

Disabling the filtering options shows the content of the folder.
http://www.pasteall.org/pic/92974

Tested on Linux and Windows.

NOTE: - The Gooseberry Branch hash e96e452 did list the folder content properly.
http://www.pasteall.org/pic/92975

ARCH Antergos 64 Bit

version 2.75 (sub 4), branch b'master', commit date b'2015-09-06' b'16:32', hash b'4ae1815', b'Release'

Ubuntu 14.04.3 LTS 64 Bit

version 2.75 (sub 4), branch b'master', commit date b'2015-08-27' b'15:25', hash b'9b3fa88', b'Release'

Windows 7 Home Premium 64 Bit

version 2.75 (sub 4), branch b'master', commit date b'2015-09-02' b'08:39', hash b'5fe9b36', b'Release'
version 2.75 (sub 4), branch b'master', commit date b'2015-09-07' b'18:01', hash b'946b850', b'Release'


WORKED (Win 7)
version 2.75 (sub 2), branch b'gooseberry', commit date b'2015-07-27' b'12:41', hash b'e96e452', b'Release'

When trying to append a file from a folder with an extension .blend in the name (for instance TEST.blend) the contents of the folder will not be listed. Also the folder will be treated as blend file (having the icon) before clicking on it. The filtering (the funnel icon) has to be disabled to show the blend files inside the folder. (How it looks in Double Commander) http://www.pasteall.org/pic/92972 How it is listed in Blender http://www.pasteall.org/pic/92973 Disabling the filtering options shows the content of the folder. http://www.pasteall.org/pic/92974 Tested on Linux and Windows. NOTE: - The Gooseberry Branch hash e96e452 did list the folder content properly. http://www.pasteall.org/pic/92975 ARCH Antergos 64 Bit ----------------------------- version 2.75 (sub 4), branch b'master', commit date b'2015-09-06' b'16:32', hash b'4ae1815', b'Release' Ubuntu 14.04.3 LTS 64 Bit ----------------------------- version 2.75 (sub 4), branch b'master', commit date b'2015-08-27' b'15:25', hash b'9b3fa88', b'Release' Windows 7 Home Premium 64 Bit ----------------------------- version 2.75 (sub 4), branch b'master', commit date b'2015-09-02' b'08:39', hash b'5fe9b36', b'Release' version 2.75 (sub 4), branch b'master', commit date b'2015-09-07' b'18:01', hash b'946b850', b'Release' ******************************************** WORKED (Win 7) version 2.75 (sub 2), branch b'gooseberry', commit date b'2015-07-27' b'12:41', hash b'e96e452', b'Release'
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Added subscriber: @mont29

Added subscriber: @mont29

Ah, can confirm in fact - it’s listed as blend file, not dir…

Ah, can confirm in fact - it’s listed as blend file, not dir…
Bastien Montagne self-assigned this 2015-09-10 22:02:02 +02:00

This issue was referenced by 9355446716

This issue was referenced by 935544671636fd679a607d380c11c4176b22bb6f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46070
No description provided.