Fix T46070: Content of folders with a .blend extension aren't listed until filtering is disabled.

Own stupid mistake somewhere during filebrowser revamp...